# multi-agent-vlm-orchestrator

./: .gitignore  README.md  pyproject.toml
configs/: experiment.json  experiment_two_stage.json  models.json  models_face_persona.json  scripts.json
examples/: sample_image.txt
requirements/: base.txt  dev.txt  local-cu126.txt
results/generated_avatars/sample_001/mock-image-generator/persona_default/: avatar.ppm
results/test_agent/: results.jsonl
results/test_agent_system/: models.json  scripts.json
results/test_tmp/: results.jsonl
results/test_tmp/two_stage/: results.jsonl
results/test_tmp/two_stage/images/: sample-a__mock-image__persona-a.ppm
scripts/: analyze_face_persona_results.py  create_conda_env.sh  generate_json_response_face_prompts.py  generate_persona_face_prompts.py  run_bagel.py  run_face_persona_experiment.py
src/multi_agent_vlm_orchestrator/: __init__.py  agent_system.py  agents.py  analysis.py  cli.py  clients.py  config.py  models.py  orchestrator.py  planner.py  registry.py  tools.py  two_stage.py
tests/: test_agent_system.py  test_orchestrator.py  test_registry.py
